--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
         <div class="calendar-body">
             <div class="calendar-week-day">
-                <div>DO</div>
-                <div>LU</div>
+                <!--<div>LU</div>
                 <div>MA</div>
                 <div>MI</div>
                 <div>JU</div>
                 <div>VI</div>
                 <div>SA</div>
+                <div>DO</div>-->
             </div>
             <div class="calendar-days">
                 <div>
